# xilo

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  makeRelease
src/: Remover.zig  SpaceShower.zig  ansi.zig  fileinfo.cc  fileinfo.zig  handler.rs  input_handler.zig  is_dir.zig  lstat.zig  main.rs  main.zig  rename.zig  space_shower.zig  winzig.h  xilo_command.json  xilo_commands.json  xilo_commands.zlap  xilo_commands_minify.json
src/Remover/: posix.zig  windows.zig
src/ln/: ln.zig
src/rm/: input_handler.zig  rename.zig  space_shower.zig
src/rm/Remover/: posix.zig  windows.zig
src/wget/: wget.zig
