[package]
name = "xilo"
version = "0.1.1"
edition = "2021"
description = "A simple replacement of \"rm\" command"
license = "MIT"
repository = "https://github.com/e0328eric/xilo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.5.3", features = ["alloc"] }
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
dirs = "4.0.0"
error-stack = "0.2.4"
sha2 = "0.10.6"
thiserror = "1.0.38"
